overflow fix

--- a/src/App.css
+++ b/src/App.css
@@ -124,7 +124,6 @@ h1{
 @media (max-width: 768px) {
   html{
     overflow-y:hidden;
-    overflow-x: hidden;
   }
 
   h1{
